unix/lang/tests/error/library3e.yab
x=0
repeat
  x=x+1

